// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`HeadlineTransformationUtils > applyDrillableItems > should enable drilling of the both items (primary, secondary) 1`] = `
{
  "primaryItem": {
    "format": null,
    "isDrillable": true,
    "localIdentifier": "m1",
    "title": "Lost",
    "value": "120",
  },
  "secondaryItem": {
    "format": null,
    "isDrillable": true,
    "localIdentifier": "m2",
    "title": "Found",
    "value": "220",
  },
}
`;

exports[`HeadlineTransformationUtils > applyDrillableItems > should enable drilling of the primary item identified by the drillable item identifier 1`] = `
{
  "primaryItem": {
    "format": null,
    "isDrillable": true,
    "localIdentifier": "m1",
    "title": "Lost",
    "value": "120",
  },
}
`;

exports[`HeadlineTransformationUtils > applyDrillableItems > should enable drilling of the primary item identified by the drillable item local identifier 1`] = `
{
  "primaryItem": {
    "format": null,
    "isDrillable": true,
    "localIdentifier": "m1",
    "title": "Lost",
    "value": "120",
  },
}
`;

exports[`HeadlineTransformationUtils > applyDrillableItems > should enable drilling of the secondary item identified by the drillable item identifier 1`] = `
{
  "primaryItem": {
    "format": null,
    "isDrillable": false,
    "localIdentifier": "m1",
    "title": "Lost",
    "value": "120",
  },
  "secondaryItem": {
    "format": null,
    "isDrillable": true,
    "localIdentifier": "m2",
    "title": "Found",
    "value": "220",
  },
}
`;

exports[`HeadlineTransformationUtils > applyDrillableItems > should enable drilling of the secondary item identified by the drillable item local identifier 1`] = `
{
  "primaryItem": {
    "format": null,
    "isDrillable": false,
    "localIdentifier": "m1",
    "title": "Lost",
    "value": "120",
  },
  "secondaryItem": {
    "format": null,
    "isDrillable": true,
    "localIdentifier": "m2",
    "title": "Found",
    "value": "220",
  },
}
`;

exports[`HeadlineTransformationUtils > applyDrillableItems > should reset drilling state of every item when drillable items does not match any header item 1`] = `
{
  "primaryItem": {
    "format": null,
    "isDrillable": false,
    "localIdentifier": "m1",
    "title": "Lost",
    "value": "120",
  },
}
`;

exports[`HeadlineTransformationUtils > applyDrillableItems > should treat provided data object as immutable 1`] = `
{
  "primaryItem": {
    "format": null,
    "isDrillable": true,
    "localIdentifier": "m1",
    "title": "Lost",
    "value": "120",
  },
}
`;

exports[`HeadlineTransformationUtils > buildDrillEventData > should build drill event data from execution for secondary value 1`] = `
{
  "element": "secondaryValue",
  "intersection": [
    {
      "header": {
        "measureHeaderItem": {
          "format": "$#,##0.00",
          "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
          "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
          "name": "Amount",
          "ref": undefined,
        },
      },
    },
  ],
  "type": "headline",
  "value": "116625456.54",
}
`;

exports[`HeadlineTransformationUtils > buildDrillEventData > should build expected drill event data from execution for primary value 1`] = `
{
  "element": "primaryValue",
  "intersection": [
    {
      "header": {
        "measureHeaderItem": {
          "format": "$#,##0.00",
          "identifier": "e519fa2a-86c3-4e32-8313-0c03062348j3",
          "localIdentifier": "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
          "name": "Won",
          "ref": undefined,
        },
      },
    },
  ],
  "type": "headline",
  "value": "38310753.45",
}
`;

exports[`HeadlineTransformationUtils > getData > should set -100 for tertiary value when primary value is 0 1`] = `
{
  "primaryItem": {
    "format": "#,##0.00",
    "isDrillable": false,
    "localIdentifier": "lostMetric",
    "title": "Lost",
    "value": "0",
  },
  "secondaryItem": {
    "format": "#,##0.00",
    "isDrillable": false,
    "localIdentifier": "wonMetric",
    "title": "Won",
    "value": "42470571.16",
  },
  "tertiaryItem": {
    "format": null,
    "isDrillable": false,
    "localIdentifier": "tertiaryIdentifier",
    "title": "Versus",
    "value": "-100",
  },
}
`;

exports[`HeadlineTransformationUtils > getData > should set 0 for tertiary value when both primary & secondary are the same values except 0 1`] = `
{
  "primaryItem": {
    "format": "#,##0.00",
    "isDrillable": false,
    "localIdentifier": "lostMetric",
    "title": "Lost",
    "value": "100",
  },
  "secondaryItem": {
    "format": "#,##0.00",
    "isDrillable": false,
    "localIdentifier": "wonMetric",
    "title": "Won",
    "value": "100",
  },
  "tertiaryItem": {
    "format": null,
    "isDrillable": false,
    "localIdentifier": "tertiaryIdentifier",
    "title": "Versus",
    "value": "0",
  },
}
`;

exports[`HeadlineTransformationUtils > getData > should set null for tertiary value when both primary & secondary values are 0 1`] = `
{
  "primaryItem": {
    "format": "#,##0.00",
    "isDrillable": false,
    "localIdentifier": "lostMetric",
    "title": "Lost",
    "value": "0",
  },
  "secondaryItem": {
    "format": "#,##0.00",
    "isDrillable": false,
    "localIdentifier": "wonMetric",
    "title": "Won",
    "value": "0",
  },
  "tertiaryItem": {
    "format": null,
    "isDrillable": false,
    "localIdentifier": "tertiaryIdentifier",
    "title": "Versus",
    "value": null,
  },
}
`;

exports[`HeadlineTransformationUtils > getData > should set null for tertiary value when both primary & secondary values are null 1`] = `
{
  "primaryItem": {
    "format": "#,##0.00",
    "isDrillable": false,
    "localIdentifier": "lostMetric",
    "title": "Lost",
    "value": null,
  },
  "secondaryItem": {
    "format": "#,##0.00",
    "isDrillable": false,
    "localIdentifier": "wonMetric",
    "title": "Won",
    "value": null,
  },
  "tertiaryItem": {
    "format": null,
    "isDrillable": false,
    "localIdentifier": "tertiaryIdentifier",
    "title": "Versus",
    "value": null,
  },
}
`;

exports[`HeadlineTransformationUtils > getData > should set null for tertiary value when primary value is null 1`] = `
{
  "primaryItem": {
    "format": "#,##0.00",
    "isDrillable": false,
    "localIdentifier": "lostMetric",
    "title": "Lost",
    "value": null,
  },
  "secondaryItem": {
    "format": "#,##0.00",
    "isDrillable": false,
    "localIdentifier": "wonMetric",
    "title": "Won",
    "value": "42470571.16",
  },
  "tertiaryItem": {
    "format": null,
    "isDrillable": false,
    "localIdentifier": "tertiaryIdentifier",
    "title": "Versus",
    "value": null,
  },
}
`;

exports[`HeadlineTransformationUtils > getData > should set null for tertiary value when secondary value is 0 1`] = `
{
  "primaryItem": {
    "format": "#,##0.00",
    "isDrillable": false,
    "localIdentifier": "lostMetric",
    "title": "Lost",
    "value": "9011389.956",
  },
  "secondaryItem": {
    "format": "#,##0.00",
    "isDrillable": false,
    "localIdentifier": "wonMetric",
    "title": "Won",
    "value": "0",
  },
  "tertiaryItem": {
    "format": null,
    "isDrillable": false,
    "localIdentifier": "tertiaryIdentifier",
    "title": "Versus",
    "value": null,
  },
}
`;

exports[`HeadlineTransformationUtils > getData > should set null for tertiary value when secondary value is null 1`] = `
{
  "primaryItem": {
    "format": "#,##0.00",
    "isDrillable": false,
    "localIdentifier": "lostMetric",
    "title": "Lost",
    "value": "9011389.956",
  },
  "secondaryItem": {
    "format": "#,##0.00",
    "isDrillable": false,
    "localIdentifier": "wonMetric",
    "title": "Won",
    "value": null,
  },
  "tertiaryItem": {
    "format": null,
    "isDrillable": false,
    "localIdentifier": "tertiaryIdentifier",
    "title": "Versus",
    "value": null,
  },
}
`;

exports[`HeadlineTransformationUtils > getData > should set primary item data from the execution 1`] = `
{
  "primaryItem": {
    "format": "$#,##0.00",
    "isDrillable": false,
    "localIdentifier": "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
    "title": "Won",
    "value": "38310753.45",
  },
}
`;

exports[`HeadlineTransformationUtils > getData > should set primary, secondary and tertiary item data from the execution 1`] = `
{
  "primaryItem": {
    "format": "$#,##0.00",
    "isDrillable": false,
    "localIdentifier": "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
    "title": "Won",
    "value": "38310753.45",
  },
  "secondaryItem": {
    "format": "$#,##0.00",
    "isDrillable": false,
    "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
    "title": "Amount",
    "value": "116625456.54",
  },
  "tertiaryItem": {
    "format": null,
    "isDrillable": false,
    "localIdentifier": "tertiaryIdentifier",
    "title": "Versus",
    "value": "-67.15060794907993",
  },
}
`;
